--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   syncfusion_flutter_charts: ^20.3.47
+  table_calendar: ^3.0.0
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
